--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ header{
     max-width: 18.5em;
     background-color: rgba(255, 255, 255, 0.58);
     border-radius: 15px;
+   
 
 }
 
@@ -185,7 +186,8 @@ footer{
     width: 85%;
     background-color: rgba(255, 255, 255, 0.58);
     border-radius: 15px;
-    
-    
+    position:relative;
+    bottom: 0;
+   
 
 }
